--- a/src/components/_baner.html
+++ b/src/components/_baner.html
@@ -9,29 +9,31 @@
                     <div class="baner__items ">
                         <a target="_blank" href="#" class="col-sm-12 col-md-4 baner__items_item">
                             <span class="d-flex justify-content-between m-0">
-                                <p class="baner__items_item-title">Розмістіть ваше <br>
-                                    оголошення</p>
+                                <p class="baner__items_item-title">Створіть <br> профіль няні
+                                </p>
                                 <img class="baner__items_item-img" src="img/Vectorinfo.png" alt="">
                             </span>
-                            <p class="baner__items_item-subtitle">Розкажіть саме про ваші потреби та <br> завдання</p>
-                        </a>
-                        <a target="_blank" href="#" class="col-sm-12 col-md-4 baner__items_item">
-                            <span class="d-flex justify-content-between m-0">
-                                <p class="baner__items_item-title">Перегляньте анкети <br> нянь поблизу</p>
-                                <img class="baner__items_item-img" src="img/Vectorinfo.png" alt="">
-                            </span>
-                            <p class="baner__items_item-subtitle">та проведіть співбесіду з тими хто <br> відповідає
-                                вашим
-                                вимогам </p>
-                        </a>
-                        <a target="_blank" href="#" class="col-sm-12 col-md-4 baner__items_item">
-                            <span class="d-flex justify-content-between m-0">
-                                <p class="baner__items_item-title">Найміть свою ідеальну <br> няню</p>
-                                <img class="baner__items_item-img" src="img/Vectorinfo.png" alt="">
-                            </span>
-                            <p class="baner__items_item-subtitle">Обговоріть деталі, сформуйте договір <br> прямо на
-                                сайті
+                            <p class="baner__items_item-subtitle">Заповніть анкету няні, додайте фото, <br> опішить своі
+                                сильні сторони
                             </p>
+                        </a>
+                        <a target="_blank" href="#" class="col-sm-12 col-md-4 baner__items_item">
+                            <span class="d-flex justify-content-between m-0">
+                                <p class="baner__items_item-title">Реагуйте на <br>
+                                    оголошення про роботу</p>
+                                <img class="baner__items_item-img" src="img/Vectorinfo.png" alt="">
+                            </span>
+                            <p class="baner__items_item-subtitle">Знаходьте оголошення поруч з вами та <br> обговорюйте
+                                умови з роботодавцем
+                            </p>
+                        </a>
+                        <a target="_blank" href="#" class="col-sm-12 col-md-4 baner__items_item">
+                            <span class="d-flex justify-content-between m-0">
+                                <p class="baner__items_item-title">Знайдіть вашого <br> вихованця </p>
+                                <img class="baner__items_item-img" src="img/Vectorinfo.png" alt="">
+                            </span>
+                            <p class="baner__items_item-subtitle">Обговоріть деталі співпраці, сформуйте <br> договір за
+                                допомогою сайту </p>
                         </a>
                     </div>
                 </div>
