--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,7 @@
 @import "components/info";
 @import "components/blog";
 @import "components/baner";
+@import "components/community";
 @import "components/footer";
 
 body{
