--- a/src/components/_community.html
+++ b/src/components/_community.html
@@ -30,11 +30,11 @@
                 <div class="community__block_date">8 червня · Різне</div>
                 <a target="_blank" href="#" class="community__block_questions">З якого віку дитина готова для того аби
                     її залишати наодинці з нянею?</a>
-            <div class="community__block_date">8 червня · Різне</div>
-            <a target="_blank" href="#" class="community__block_questions">Якого віку повинна бути відповідальна
-                няня?</a>
+                <div class="community__block_date">8 червня · Різне</div>
+                <a target="_blank" href="#" class="community__block_questions">Якого віку повинна бути відповідальна
+                    няня?</a>
         </div>
-    </span>
+        </span>
         <div class="col-6">
             <div class="community__subtitle_last">Обговорюють зараз</div>
             <div class="community__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod
@@ -42,6 +42,31 @@
                 incididunt ut labore et dolore magna aliqua. Ut enim <br> ad minim veniam, quis nostrud exercitation
                 ullamco
                 laboris nisi ut <br> aliquip ex ea commodo consequat. </div>
+            <span class="d-flex align-items-center mt-4">
+                <div class="community__img"> </div>
+                <a target="_blank" href="#" class="community__name">Юлія К.</a>
+                <div class="community__status">в топіку</div>
+                <p class="community__advice">“Поради, як не промахнутись з вибором няні”</p>
+            </span>
+            <div class="community__text_next">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
+            <span class="d-flex align-items-center mt-4">
+                <div class="community__img_last"> </div>
+                <a target="_blank" href="#" class="community__name">Юлія К.</a>
+                <div class="community__status">в топіку</div>
+                <p class="community__advice">“Поради, як не промахнутись з вибором няні”</p>
+            </span>
+            <div class="community__text_last">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim <br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut <br> aliquip
+                ex ea commodo consequat.
+            </div>
+            <span class="d-flex align-items-center mt-4">
+                <div class="community__img"> </div>
+                <a target="_blank" href="#" class="community__name">Юлія К.</a>
+                <div class="community__status">в топіку</div>
+                <p class="community__advice">“Поради, як не промахнутись з вибором няні”</p>
+            </span>
         </div>
     </div>
 </div>
