--- a/src/components/_community.html
+++ b/src/components/_community.html
@@ -68,5 +68,8 @@
                 <p class="community__advice">“Поради, як не промахнутись з вибором няні”</p>
             </span>
         </div>
+        <div class="col-12 d-flex justify-content-center">
+            <a target="_blank" href="#" class="community__button"><p>Перейти до форуму</p> <img class="community__button_img" src="img/Vectorcom.png" alt=""></a>
+        </div>
     </div>
 </div>
