--- a/src/sass/components/_community.scss
+++ b/src/sass/components/_community.scss
@@ -37,7 +37,8 @@
             color: #000000;
             margin-top: 70px;
         }
-        &_last{
+
+        &_last {
             font-weight: 500;
             font-size: 16px;
             color: #000000;
@@ -79,14 +80,14 @@
         background-size: cover;
         border-radius: 50%;
 
-        &_last{
+        &_last {
             height: 40px;
-        width: 40px;
-        background-image: url('../img/comimglast.png');
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-        border-radius: 50%;
+            width: 40px;
+            background-image: url('../img/comimglast.png');
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            border-radius: 50%;
         }
     }
 
@@ -110,5 +111,23 @@
         font-size: 16px;
         text-decoration-line: underline;
         color: #000000;
+    }
+
+    &__button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid #1E3173;
+        padding: 16px 100px;
+        color: #1E3173;
+        font-weight: 600;
+        font-size: 22px;
+        border-radius: 50px;
+        margin-top: 80px;
+
+        &_img{
+            margin-left: 12px;
+            margin-top: 4px;
+        }
     }
 }
