--- a/src/components/_community.html
+++ b/src/components/_community.html
@@ -6,13 +6,13 @@
         <div class="col-12">
             <div class="community__subtitle">Обмін досвідом, спілкування, рекомендації</div>
         </div>
-        <div class="col-6">
+        <div class="col-md-12 col-lg-6">
             <div class="community__line"></div>
         </div>
-        <div class="col-6">
+        <div id="line__mobile" class="col-md-12 col-lg-6">
             <div class="community__line"></div>
         </div>
-        <div class="col-6">
+        <div class="col-md-12 col-lg-6">
             <div class="community__subtitle_last">Популярне на форумі</div>
             <span class="community__block">
                 <div class="community__block_date">8 червня · Різне</div>
@@ -35,7 +35,8 @@
                     няня?</a>
         </div>
         </span>
-        <div class="col-6">
+        <div id="line__mobile_last" class="community__line"></div>
+        <div class="col-md-12 col-lg-6">
             <div class="community__subtitle_last">Обговорюють зараз</div>
             <div class="community__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod
                 tempor
