--- a/src/components/_blog.html
+++ b/src/components/_blog.html
@@ -1,3 +1,52 @@
 <div class="blog">
-
+    <div class="container">
+        <div class="row">
+            <div class="col-12 d-flex justify-content-between">
+                <h2 class="blog__title">Свіже в блозі</h2>
+                <span>
+                    <a target="_blank" href="#"><img class="blog__stroke" src="img/Vectorblog1.png" alt=""></a>
+                    <a target="_blank" href="#"><img class="blog__stroke" src="img/Vectorblog2.png" alt=""></a>
+                </span>
+            </div>
+            <div class="col-12">
+                <div class="blog__tabs">
+                    <a class="blog__tabs_tab" target="_blank" href="#">Все</a>
+                    <a class="blog__tabs_tab" target="_blank" href="#">Авторські статті</a>
+                    <a class="blog__tabs_tab" target="_blank" href="#">Дослідження</a>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="blog__card">
+                    <img class="blog__card_img" src="img/blogphoto1.png" alt="">
+                    <h2 class="blog__card_title">Як вибрати няню для дитини?</h2>
+                    <p class="blog__card_date">8 червня</p>
+                    <a class="blog__card_btn" target="_blank" href="#">поради</a>
+                    <a class="blog__card_btn" target="_blank" href="#">корисне</a>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="blog__card">
+                    <img class="blog__card_img" src="img/blogphoto2.png" alt="">
+                    <h2 class="blog__card_title">Як вибрати няню для дитини?</h2>
+                    <p class="blog__card_date">8 червня</p>
+                    <a class="blog__card_btn" target="_blank" href="#">поради</a>
+                    <a class="blog__card_btn" target="_blank" href="#">корисне</a>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="blog__card">
+                    <img class="blog__card_img" src="img/blogphoto3.png" alt="">
+                    <h2 class="blog__card_title">Як вибрати няню для дитини?</h2>
+                    <p class="blog__card_date">8 червня</p>
+                    <a class="blog__card_btn" target="_blank" href="#">поради</a>
+                    <a class="blog__card_btn" target="_blank" href="#">корисне</a>
+                </div>
+            </div>
+            <div class="col-12 d-flex justify-content-center">
+                <a target="_blank" href="#" class="blog__button">
+                    <p>Читати більше</p> <img class="blog__button_img" src="img/Vectorcom.png" alt="">
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
