--- a/src/sass/components/_blog.scss
+++ b/src/sass/components/_blog.scss
@@ -3,4 +3,113 @@
     width: 100%;
     height: 750px;
     background: linear-gradient(102.5deg, #FFF6DA 0%, #FFDEF2 100%);
+
+    &__title {
+        font-weight: 700;
+        font-size: 48px;
+        color: #000000;
+        margin-top: 64px;
+    }
+
+    &_iidd {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__stroke {
+        margin-top: 64px;
+        margin-left: 20px;
+    }
+
+    &__tabs {
+
+        margin-top: 20px;
+
+        :first-child {
+            font-weight: 400;
+            font-size: 16px;
+            color: #1E3173;
+            margin-right: 48px;
+            transition: 0.3s all;
+
+            :hover {
+                background-color: #1E3173;
+                border-radius: 24px;
+                transition: 0.3s all;
+                padding: 5px 20px;
+                color: #FFF6DA;
+            }
+        }
+
+        :nth-child(2) {
+            font-weight: 400;
+            font-size: 16px;
+            color: #1E3173;
+            margin-right: 26px;
+
+            :hover {
+                background-color: #1E3173;
+                border-radius: 24px;
+                transition: 0.3s all;
+                padding: 5px 20px;
+            }
+        }
+
+        :last-child {
+            font-weight: 400;
+            font-size: 16px;
+            color: #1E3173;
+        }
+
+    }
+
+    &__card {
+        margin-top: 50px;
+
+        &_img {
+            width: 100%;
+            height: 256px;
+            border-radius: 12px;
+        }
+
+        &_title {
+            font-weight: 700;
+            font-size: 24px;
+            color: #000000;
+            margin-top: 26px;
+        }
+
+        &_date {
+            font-weight: 500;
+            font-size: 14px;
+            color: #AAAAAA;
+            margin-top: 8px;
+            margin-bottom: 30px;
+        }
+
+        &_btn {
+            padding: 6px 12px;
+            border: 1px solid #1E3173;
+            border-radius: 20px;
+            color: #1E3173;
+            margin-right: 12px;
+        }
+    }
+    &__button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid #1E3173;
+        padding: 16px 100px;
+        color: #1E3173;
+        font-weight: 600;
+        font-size: 22px;
+        border-radius: 50px;
+        margin-top: 56px;
+
+        &_img{
+            margin-left: 12px;
+            margin-top: 2px;
+        }
+    }
 }
