--- a/src/components/_blog.html
+++ b/src/components/_blog.html
@@ -10,13 +10,13 @@
             </div>
             <div class="col-12">
                 <div class="blog__tabs">
-                    <a class="blog__tabs_tab" target="_blank" href="#">Все</a>
-                    <a class="blog__tabs_tab" target="_blank" href="#">Авторські статті</a>
-                    <a class="blog__tabs_tab" target="_blank" href="#">Дослідження</a>
+                    <a id="tab-1" class="blog__tabs_tab active"  data-tabs="1">Все</a>
+                    <a id="tab-2" class="blog__tabs_tab"  data-tabs="2">Авторські статті</a>
+                    <a id="tab-3" class="blog__tabs_tab" data-tabs="3">Дослідження</a>
                 </div>
             </div>
             <div class="col-4">
-                <div class="blog__card">
+                <div class="blog__card" data-tabs="1">
                     <img class="blog__card_img" src="img/blogphoto1.png" alt="">
                     <h2 class="blog__card_title">Як вибрати няню для дитини?</h2>
                     <p class="blog__card_date">8 червня</p>
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="col-4">
-                <div class="blog__card">
+                <div class="blog__card" data-tabs="2">
                     <img class="blog__card_img" src="img/blogphoto2.png" alt="">
                     <h2 class="blog__card_title">Як вибрати няню для дитини?</h2>
                     <p class="blog__card_date">8 червня</p>
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="col-4">
-                <div class="blog__card">
+                <div class="blog__card" data-tabs="3">
                     <img class="blog__card_img" src="img/blogphoto3.png" alt="">
                     <h2 class="blog__card_title">Як вибрати няню для дитини?</h2>
                     <p class="blog__card_date">8 червня</p>
