--- a/src/sass/components/_blog.scss
+++ b/src/sass/components/_blog.scss
@@ -22,23 +22,15 @@
     }
 
     &__tabs {
-
+        cursor: pointer;
         margin-top: 20px;
 
         :first-child {
             font-weight: 400;
             font-size: 16px;
             color: #1E3173;
-            margin-right: 48px;
-            transition: 0.3s all;
-
-            :hover {
-                background-color: #1E3173;
-                border-radius: 24px;
-                transition: 0.3s all;
-                padding: 5px 20px;
-                color: #FFF6DA;
-            }
+            margin-right: 28px;
+            transition: 0.5s all;
         }
 
         :nth-child(2) {
@@ -46,19 +38,25 @@
             font-size: 16px;
             color: #1E3173;
             margin-right: 26px;
-
-            :hover {
-                background-color: #1E3173;
-                border-radius: 24px;
-                transition: 0.3s all;
-                padding: 5px 20px;
-            }
+            transition: 0.5s all;
         }
 
         :last-child {
             font-weight: 400;
             font-size: 16px;
             color: #1E3173;
+            transition: 0.5s all;
+        }
+
+        &_tab {
+
+            &.active {
+                background-color: #1E3173;
+                padding: 6px 20px;
+                color: white;
+                border-radius: 24px;
+                transition: 0.5s all;
+            }
         }
 
     }
@@ -95,6 +93,7 @@
             margin-right: 12px;
         }
     }
+
     &__button {
         display: flex;
         align-items: center;
@@ -107,7 +106,7 @@
         border-radius: 50px;
         margin-top: 56px;
 
-        &_img{
+        &_img {
             margin-left: 12px;
             margin-top: 2px;
         }
