--- a/src/components/_blog.html
+++ b/src/components/_blog.html
@@ -15,27 +15,27 @@
                     <a id="tab-3" class="blog__tabs_tab" data-tabs="3">Дослідження</a>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-12 col-lg-4">
                 <div class="blog__card" data-tabs="1">
-                    <img class="blog__card_img" src="img/blogphoto1.png" alt="">
+                    <div class="blog__card_imgfirst"></div>
                     <h2 class="blog__card_title">Як вибрати няню для дитини?</h2>
                     <p class="blog__card_date">8 червня</p>
                     <a class="blog__card_btn" target="_blank" href="#">поради</a>
                     <a class="blog__card_btn" target="_blank" href="#">корисне</a>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-12 col-lg-4">
                 <div class="blog__card" data-tabs="2">
-                    <img class="blog__card_img" src="img/blogphoto2.png" alt="">
+                    <div class="blog__card_imgnext"></div>
                     <h2 class="blog__card_title">Як вибрати няню для дитини?</h2>
                     <p class="blog__card_date">8 червня</p>
                     <a class="blog__card_btn" target="_blank" href="#">поради</a>
                     <a class="blog__card_btn" target="_blank" href="#">корисне</a>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-md-12 col-lg-4">
                 <div class="blog__card" data-tabs="3">
-                    <img class="blog__card_img" src="img/blogphoto3.png" alt="">
+                    <div class="blog__card_imglast"></div>
                     <h2 class="blog__card_title">Як вибрати няню для дитини?</h2>
                     <p class="blog__card_date">8 червня</p>
                     <a class="blog__card_btn" target="_blank" href="#">поради</a>
