--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -27,7 +27,7 @@
     &__btn-first {
         background: #FFFFFF;
         border-radius: 32px;
-        padding: 20px 26px;
+        padding: 24px 26px 26px;
         display: flex;
         align-items: center;
         justify-content: space-between;
