--- a/src/components/_community.html
+++ b/src/components/_community.html
@@ -43,7 +43,7 @@
                 incididunt ut labore et dolore magna aliqua. Ut enim <br> ad minim veniam, quis nostrud exercitation
                 ullamco
                 laboris nisi ut <br> aliquip ex ea commodo consequat. </div>
-            <span class="d-flex align-items-center mt-4">
+            <span class="community__size">
                 <div class="community__img"> </div>
                 <a target="_blank" href="#" class="community__name">Юлія К.</a>
                 <div class="community__status">в топіку</div>
@@ -51,18 +51,20 @@
             </span>
             <div class="community__text_next">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br>
                 eiusmod tempor incididunt ut labore et dolore magna aliqua. </div>
-            <span class="d-flex align-items-center mt-4">
+            <span class="community__size">
                 <div class="community__img_last"> </div>
                 <a target="_blank" href="#" class="community__name">Юлія К.</a>
                 <div class="community__status">в топіку</div>
                 <p class="community__advice">“Поради, як не промахнутись з вибором няні”</p>
             </span>
             <div class="community__text_last">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim <br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut <br> aliquip
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do <br> eiusmod tempor incididunt ut labore
+                et
+                dolore magna aliqua. Ut enim <br> ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                <br> aliquip
                 ex ea commodo consequat.
             </div>
-            <span class="d-flex align-items-center mt-4">
+            <span class="community__size">
                 <div class="community__img"> </div>
                 <a target="_blank" href="#" class="community__name">Юлія К.</a>
                 <div class="community__status">в топіку</div>
@@ -70,7 +72,9 @@
             </span>
         </div>
         <div class="col-12 d-flex justify-content-center">
-            <a target="_blank" href="#" class="community__button"><p>Перейти до форуму</p> <img class="community__button_img" src="img/Vectorcom.png" alt=""></a>
+            <a target="_blank" href="#" class="community__button">
+                <p>Перейти до форуму</p> <img class="community__button_img" src="img/Vectorcom.png" alt="">
+            </a>
         </div>
     </div>
 </div>
