--- a/src/sass/components/_blog.scss
+++ b/src/sass/components/_blog.scss
@@ -66,6 +66,7 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
+
         &_imgnext {
             width: 100%;
             height: 256px;
@@ -75,6 +76,7 @@
             background-repeat: no-repeat;
             background-size: cover;
         }
+
         &_imglast {
             width: 100%;
             height: 256px;
@@ -126,45 +128,60 @@
             margin-top: 2px;
         }
     }
+
     @media screen and(max-width: 992px) {
         &__stroke {
             display: none;
         }
-        &__card{
-            &_imgfirst{
+
+        &__card {
+            &_imgfirst {
                 height: 400px;
             }
-            &_imgnext{
+
+            &_imgnext {
                 height: 400px;
             }
-            &_imglast{
+
+            &_imglast {
                 height: 400px;
             }
         }
     }
+
     @media screen and(max-width: 576px) {
-        &__card{
-            &_imgfirst{
+        &__card {
+            &_imgfirst {
                 height: 300px;
             }
-            &_imgnext{
+
+            &_imgnext {
                 height: 300px;
                 min-width: 100%;
             }
-            &_imglast{
+
+            &_imglast {
                 height: 300px;
             }
         }
     }
-    @media screen and(max-width: 415px) {
-        &__button{
-            padding: 16px 70px; 
+    @media screen and(max-width: 537px) {
+        &{
+            margin-top: 670px;
         }
-        &__tabs{
-            :first-child{
+    }
+
+    @media screen and(max-width: 415px) {
+        &__button {
+            padding: 16px 70px;
+        }
+
+        &__tabs {
+            :first-child {
                 margin-right: 20px;
             }
-            :nth-child(2){
+
+            :nth-child(2) {
                 margin-right: 20px;
             }
         }
